--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-"homepage": "https://Sriram756.github.io/puravirtus",
+"homepage": "https://puravirtus.in",
 "scripts": {
   "build": "vite build",
   "predeploy": "npm run build",
